test/error/test_negatif_7.tpc
/*#include <stdio.h>
#include <stdlib.h>*/

int main(void){
    struct Carre c1, c2, c3;
    if(c1 == NULL){
        /*do something*/
        return 1;
    }
    return 0;
}

    